<resources>
    <string name="app_name">Cupboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>


    <string name="nav_header_title">Not currently signed in.</string>
    <string name="nav_header_subtitle">Click here to sign in!</string>

    <string name="nav_label_home">Home</string>
    <string name="nav_label_cupboard">Cupboard</string>
    <string name="nav_label_recipes">Recipes</string>
    <string name="nav_label_lists">Shopping Lists</string>
    <string name="nav_label_settings">Settings</string>
    <string name="nav_label_logout">Log out</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_cupboard">My Cupboard</string>
    <string name="title_recipes">My Recipes</string>
    <string name="title_lists">My Shopping Lists</string>
    <string name="title_new_food">New Food Item</string>
    <string name="title_edit_food">Edit Food Item</string>

    <string name="nav_label_dashboard">Dashboard</string>

    <string name="email_text_box">Email</string>
    <string name="password_text_box">Password</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_create_account">Create Account</string>
    <string name="description_delete_item">Delete item</string>
    <string name="description_none">None</string>

    <string-array name="sort_choices"><item>Alphabetically</item><item>Expiration</item></string-array>
    <string-array name="food_categories"><item>Pantry</item><item>Fridge</item><item>Freezer</item></string-array>

    <string name="request_code">requestCode</string>
    <string name="food_name">foodName</string>
    <string name="food_expires">foodExpires</string>
    <string name="food_quantity">foodQuantity</string>
    <string name="food_category">foodCategory</string>
    <string name="food_description">foodDescription</string>

    <string name="alert_name_required">Please enter a value in the \"Name\" field</string>
    <string name="alert_ok">OK</string>

    <string name="msg_never">Never</string>


</resources>
